# CoinIpopt

./: .gitignore  Makefile  README.md  config.status  configure.ac  libtool
Debug/lib/: libcoinblas.la  libcoinlapack.la  libipoptamplinterface.la
Debug/lib/pkgconfig/: coinasl.pc  coinblas.pc  coinlapack.pc  coinmetis.pc  coinmumps.pc  ipopt.pc  ipoptamplinterface.pc
Ipopt/: Makefile  config.status  ipopt-uninstalled.pc  ipopt.pc  ipoptamplinterface-uninstalled.pc
Ipopt/contrib/JavaInterface/: Makefile
Ipopt/contrib/MatlabInterface/src/: Makefile
Ipopt/contrib/RInterface/src/: Makevars
Ipopt/contrib/sIPOPT/AmplSolver/: Makefile
Ipopt/contrib/sIPOPT/examples/parametric_cpp/: Makefile
Ipopt/contrib/sIPOPT/examples/parametric_dsdp_cpp/: Makefile
Ipopt/contrib/sIPOPT/examples/redhess_cpp/: Makefile
Ipopt/contrib/sIPOPT/src/: Makefile
Ipopt/doxydoc/: doxygen.conf
Ipopt/examples/Cpp_example/: Makefile
Ipopt/examples/ScalableProblems/: Makefile
Ipopt/examples/hs071_c/: Makefile
Ipopt/examples/hs071_cpp/: Makefile
Ipopt/examples/hs071_f/: Makefile
Ipopt/src/Algorithm/: Makefile
Ipopt/src/Algorithm/.deps/: IpAlgBuilder.Plo
Ipopt/src/Algorithm/Inexact/: Makefile
Ipopt/src/Algorithm/LinearSolvers/: Makefile
Ipopt/src/Algorithm/LinearSolvers/.deps/: IpLinearSolversRegOp.Plo  IpMumpsSolverInterface.Plo
Ipopt/src/Apps/: Makefile
Ipopt/src/Apps/AmplSolver/: Makefile
Ipopt/src/Apps/AmplSolver/.deps/: AmplTNLP.Plo  ampl_ipopt.Po
Ipopt/src/Apps/AmplSolver/.libs/: libipoptamplinterface.la
Ipopt/src/Apps/CUTErInterface/: Makefile
Ipopt/src/Common/: Makefile
Ipopt/src/Interfaces/: Makefile  libipopt.la
Ipopt/src/Interfaces/.deps/: IpIpoptApplication.Plo  IpTNLPAdapter.Plo
Ipopt/src/LinAlg/: Makefile
Ipopt/src/LinAlg/TMatrices/: Makefile
Ipopt/src/contrib/CGPenalty/: Makefile
Ipopt/src/contrib/LinearSolverLoader/: Makefile
Ipopt/test/: Makefile  hs071_cpp
Ipopt/tutorial/CodingExercise/C/2-mistake/: Makefile
Ipopt/tutorial/CodingExercise/Cpp/1-skeleton/: Makefile
Ipopt/tutorial/CodingExercise/Cpp/2-mistake/: Makefile
Release/lib/: libcoinasl.la  libcoinmetis.la  libipopt.la
Release/lib/pkgconfig/: coinmetis.pc  coinmumps.pc  ipoptamplinterface.pc
doxydoc/: doxygen.conf
myexample/: CMakeLists.txt
myexample/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  my_example.cbp
myexample/Release/: FinalPosture.nl
myexample/src/: hs071_main.cpp  hs071_nlp.cpp  hs071_nlp.hpp  hs071_nlp_old.hpp
(+2 files in other folders)
